@@ -96,6 +96,7 @@ int main(int argumentCount, char * arguments[])
 	TEST(testGeometryCreator); 
 	TEST(writeImageToFile);
 	TEST(meshTransform);
+	TEST(createImage);
 	// all driver checks
 	TEST(drawPixel);
 	TEST(guiDisabledMenu);
@@ -107,6 +108,7 @@ int main(int argumentCount, char * arguments[])
 	TEST(antiAliasing);
 	TEST(draw2DImage);
 	TEST(lights);
+	TEST(twodmaterial);
 	// TODO: Needs to be fixed first.
 //	TEST(projectionMatrix);
 	// large scenes/long rendering
