@@ -172,6 +172,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\2dmaterial.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\anti-aliasing.cpp"
 				>
 			</File>
@@ -193,6 +197,10 @@
 			</File>
 			<File
 				RelativePath=".\color.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\createImage.cpp"
 				>
 			</File>
 			<File
